[gd_scene load_steps=8 format=3 uid="uid://ntu0vgoaa0hg"]

[ext_resource type="PackedScene" uid="uid://butxpsot3w1yq" path="res://gui/track_list_browser/tab_bar/add_tab_button.tscn" id="1_i482l"]
[ext_resource type="Script" uid="uid://x2xafaju2d4d" path="res://gui/track_list_browser/tab_bar/tab_bar.gd" id="1_kriti"]
[ext_resource type="PackedScene" uid="uid://cn7sklr7p6d6g" path="res://gui/track_list_browser/tab_bar/tab_header.tscn" id="2_5epua"]
[ext_resource type="StyleBox" uid="uid://cyvqocfgjh0ll" path="res://gui/background.stylebox" id="2_hyy8w"]
[ext_resource type="Resource" uid="uid://chtu6phxcxi1j" path="res://core/data_base_ordered.tres" id="2_vudp7"]
[ext_resource type="Resource" uid="uid://bn1oi81qkphlm" path="res://core/playback.tres" id="3_eawgy"]
[ext_resource type="Theme" uid="uid://dth1glssy4o5f" path="res://gui/track_list_browser/tab_bar/invisible_h_scroll_bar.theme.tres" id="3_kkjn4"]

[node name="TabBar" type="MarginContainer"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 23.0
grow_horizontal = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 0
script = ExtResource("1_kriti")
default_source = ExtResource("2_vudp7")
default_playback = ExtResource("3_eawgy")

[node name="Panel" type="Panel" parent="."]
layout_mode = 2
mouse_filter = 2
theme_override_styles/panel = ExtResource("2_hyy8w")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 0

[node name="InvisibleTabHeader" parent="HBoxContainer/MarginContainer" instance=ExtResource("2_5epua")]
modulate = Color(1, 1, 1, 0)
show_behind_parent = true
layout_mode = 2
size_flags_horizontal = 0
mouse_filter = 2
text = "A"

[node name="ScrollContainer" type="ScrollContainer" parent="HBoxContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("3_kkjn4")
vertical_scroll_mode = 0

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/MarginContainer/ScrollContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 0

[node name="Headers" type="HBoxContainer" parent="HBoxContainer/MarginContainer/ScrollContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 8

[node name="RightFloatingPlace" type="MarginContainer" parent="HBoxContainer/MarginContainer/ScrollContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 0

[node name="AddTabButton" parent="HBoxContainer/MarginContainer/ScrollContainer/HBoxContainer/RightFloatingPlace" instance=ExtResource("1_i482l")]
unique_name_in_owner = true
layout_mode = 2

[node name="RightSidePlace" type="MarginContainer" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 0
